# real_world_projects_python

./: .gitignore
stock_portfolio/: 8501516678_PortFolioEqtSummary.csv  akk_stocks.csv  example.py  pyproject.toml
